Add:efectivo_scaffold

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,11 @@
 <% if user_signed_in? %>
   Bienvenido <%= current_user.email %>
   <%= link_to "Salir", destroy_user_session_path, method: :delete %>
+
+  <br/>
+  <%= link_to "Control de Efectivo",  cashes_path %>
 <% else %>
   <%= link_to "Ingresar", new_user_session_path %>
+  
+
 <% end %>
