--- a/app/views/cashes/new.html.erb
+++ b/app/views/cashes/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Cash</h1>
+<div class="page-header">
+    <div class="page-block">
+      <div class="row align-items-center">
+        <div class="col-md-8">
+          <div class="page-header-title">
+            <h4 class="m-b-10">Nuevo Registro</h4>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 <%= render 'form', cash: @cash %>
 
-<%= link_to 'Back', cashes_path %>
+<%= link_to 'Volver', cashes_path %>
