--- a/app/views/cashes/edit.html.erb
+++ b/app/views/cashes/edit.html.erb
@@ -1,4 +1,15 @@
-<h1>Editing Cash</h1>
+<div class="page-header">
+    <div class="page-block">
+      <div class="row align-items-center">
+        <div class="col-md-8">
+          <div class="page-header-title">
+            <h4 class="m-b-10">Editar Registro</h4>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 <%= render 'form', cash: @cash %>
 
