--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CashControl</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Control efectivo</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="Gradient Able Bootstrap admin template made using Bootstrap 4 and it has huge amount of ready made feature, UI components, pages which completely fulfills any dashboard needs." />
+  <meta name="keywords" content="bootstrap, bootstrap admin template, admin theme, admin dashboard, dashboard template, admin template, responsive" />
+  <meta name="author" content="RTSystemPerú" />
+  <%= favicon_link_tag 'favicon.ico' %>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+</head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-    <%= yield %>
-  </body>
+<body>
+  <div class="loader-bg">
+    <div class="loader-bar"></div>
+  </div>
+  <div id="pcoded" class="pcoded">
+    <div class="pcoded-overlay-box"></div>
+    <div class="pcoded-container navbar-wrapper">
+      <%= render partial: 'partials/navbar' %>
+      <div class="pcoded-main-container">
+        <div class="pcoded-wrapper">
+          <%= render partial: 'partials/sidebar' %>
+
+          <div class="pcoded-content">
+            <% if flash[:notice] %>
+            <div class="alert alert-success border-success">
+              
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <i class="icofont icofont-close-line-circled"></i>
+              </button>
+              <strong><%= flash[:notice].to_s %></strong>
+            </div>
+            <% end %>
+            <%= yield %>
+          </div>
+
+          <div id="styleSelector"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
