--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -31,15 +31,17 @@
   </div>
   <div class="pcoded-navigation-label">Navegación</div>
   <ul class="pcoded-item pcoded-left-item">
-    <li class=" ">
+    
+  <li class="pcoded-hasmenu">
       <a href="/cashes" class="waves-effect waves-dark">
-        
-        <span class="pcoded-micon">
-          <i class="feather icon-feather"></i>
-        </span>
+        <span class="pcoded-micon"><i class="feather icon-feather"></i></i></span>
         <span class="pcoded-mtext">Control Efectivo</span>
       </a>
+      
     </li>
+    
+    
+
     <li class="pcoded-hasmenu">
       <a href="javascript:void(0)" class="waves-effect waves-dark">
         <span class="pcoded-micon"><i class="feather icon-help-circle"></i></span>
