--- a/app/views/cashes/_form.html.erb
+++ b/app/views/cashes/_form.html.erb
@@ -38,7 +38,7 @@
 
                       </div>
                       <div class="form-group form-primary">
-                       <%= form.text_field :concept, class: 'form-control', required: '' %>
+                       <%= form.text_field :concept, class: 'form-control' %>
 
                        <span class="form-bar" ></span>
                         <%= form.label :Escribir_Concepto, style: "#{'display:none' if @edit == 1}", class: 'float-label' %>
