--- a/app/views/cashes/index.html.erb
+++ b/app/views/cashes/index.html.erb
@@ -1,73 +1,118 @@
 
 
 
-  <div class="page-header">
-    <div class="page-block">
-      <div class="row align-items-center">
-        <div class="col-md-8">
-          <div class="page-header-title">
-            <h4 class="m-b-10">
-              Control de efectivo
-            </h4>
-          </div>
-         
+<div class="page-header">
+  <div class="page-block">
+    <div class="row align-items-center">
+      <div class="col-md-8">
+        <div class="page-header-title">
+          <h4 class="m-b-10">
+            Control de efectivo
+          </h4>
         </div>
+
       </div>
     </div>
   </div>
+</div>
 
 
-  <div class="pcoded-inner-content">
-    <!-- Main-body start -->
-    <div class="main-body">
-      <div class="page-wrapper">
-        <!-- Page-body start -->
-        <div class="page-body">
-          <div class="row">
-            <div class="col-sm-12">
-              <!-- HTML5 Export Buttons table start -->
-              <div class="card">
-                <div class="card-header table-card-header">
-                  
-                  <%= link_to 'Registrar', new_cash_path, class: 'btn btn-primary' %>
-                  
-                </div>
-                <div class="card-block">
-                  <div class="dt-responsive table-responsive">
-                    <table class="table table-striped table-bordered nowrap" id="basic-btn">
-                      <thead>
-                        <tr>
-                          <th>Concepto</th>
-                          <th>Moeda</th>
-                          <th>Ingreso</th>
-                          <th>Egreso</th>
-                          <th colspan="2"></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <% @cashes.each do |cash| %>
-                        <tr>
-                          <td><%= cash.concept %></td>
-                          <td><%= cash.coin %></td>
-                          <td><%= cash.entry %></td>
-                          <td><%= cash.egress %></td>
+<div class="pcoded-inner-content">
+  <!-- Main-body start -->
+  <div class="main-body">
+    <div class="page-wrapper">
+      <!-- Page-body start -->
+      <div class="page-body">
+        <div class="row">
+          <div class="col-sm-12">
+            <!-- HTML5 Export Buttons table start -->
+            <div class="card">
+              <div class="card-header table-card-header">
+               <nav class="navbar navbar-expand-lg navbar-dark bg-basic" >
 
-                        
-                          <td><%= link_to 'Editar', edit_cash_path(cash) %></td>
-                          <td><%= link_to 'Eliminar', cash, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                        </tr>
-                        <% end %>
-                      </tbody>
-
-                    </table>
-
+                <form class="form-inline my-2 my-lg-0" action="/cashes" method="get">
+                 <div class="input-group input-group-sm " style="width: 220px;padding-top: 15px" >
+                  <input type="text" name="search" class="form-control" style="height: 44px; " placeholder="Buscar" <%= @search %> >
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn waves-effect waves-light hor-grd btn-grd-primary"><i class="fa fa-search"></i></button>
                   </div>
                 </div>
+              </form>
+              <button class="navbar-toggler navbar-toggler-right collapsed bg-primary" style="height: 44px; " type="button" data-toggle="collapse" data-target="#navb" aria-expanded="false">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="navbar-collapse collapse" id="navb">
+                <ul class="navbar-nav mr-auto">
+
+                </ul>
+
+                <form class="form-inline my-2 my-lg-0" action="/cahse" method="get">
+                  <%= link_to '<button type="button" style="float:left" class="btn waves-effect waves-light hor-grd btn-grd-primary ">Registrar</button>'.html_safe, new_cash_path%>
+                  <div class="" style=" float: right" >
+                    <%= link_to cashes_path(format: :pdf, search: @search), target: '_blank' do %>
+                    <%= image_tag ('pdf.ico'), height: '50', width: '50', style: 'margin-left: 6px' %>
+                    <% end %>
+
+
+                  </div>
+
+
+
+                </form>
               </div>
+            </nav>
+
+
+          </div>
+
+          <div class="card-block">
+            <div class="dt-responsive table-responsive">
+              <table class="table table-striped table-bordered nowrap" id="basic-btn">
+                <thead>
+                  <tr>
+                    <th>Concepto</th>
+                    <th>Fecha Registro</th>
+                    <th>Moeda</th>
+                    <th>Ingreso</th>
+                    <th>Egreso</th>
+
+                    <th colspan="2"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @cashes.each do |cash| %>
+                  <tr>
+                    <td><%= cash.concept %></td>
+                    <td><%= cash.created_at.strftime("%d/%m/%Y %H:%M") %></td>
+                    <td><%= cash.coin %></td>
+                    <td><%= cash.entry %></td>
+                    <td><%= cash.egress %></td>
+
+
+
+                    <td><%= link_to '<button type="button" class="btn waves-effect waves-dark btn-primary btn-outline-primary"><i class="fa fa-edit"></i></button>'.html_safe, edit_cash_path(cash) %></td>
+
+                    <td>
+                      <%= link_to '<button type="button" class="btn waves-effect waves-dark btn-primary btn-outline-primary"><i class="fa fa-trash-o"></i></button>'.html_safe, cash, remote: 'true', method: :delete, data: { confirm: 'Are you sure?'} %>
+
+                    </td>
+                  </tr>
+                  <% end %>
+                </tbody>
+
+              </table>
+
             </div>
+
+
+            <%= will_paginate @cashes, previous_label: "Atras", next_label: "Siguiente", innner_window:1, outer_window: 0,renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
 
