--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -50,12 +50,12 @@
       <ul class="pcoded-submenu">
         
         <li class="">
-          <a href="dashboard-ecommerce.html" class="waves-effect waves-dark">
+          <a href="/cashes/entry" class="waves-effect waves-dark">
             <span class="pcoded-mtext">Ingresos</span>
           </a>
         </li>
         <li class="">
-          <a href="dashboard-crm.html" class="waves-effect waves-dark">
+          <a href="/cashes/egress" class="waves-effect waves-dark">
             <span class="pcoded-mtext">Egresos</span>
           </a>
         </li>
