--- a/app/views/cashes/egress.html.erb
+++ b/app/views/cashes/egress.html.erb
@@ -7,7 +7,7 @@
       <div class="col-md-8">
         <div class="page-header-title">
           <h4 class="m-b-10">
-            Control de efectivo
+            Reporte de Egresos
           </h4>
         </div>
 
